@@ -52,5 +52,21 @@ void focus_frame::notify_focus(bool bFocus)
 {
     bFocus_ = bFocus;
 }
+
+void focus_frame::notify_visible(bool bTriggerEvents)
+{
+    if (bAutoFocus_)
+        set_focus(true);
+
+    frame::notify_visible(bTriggerEvents);
+}
+
+void focus_frame::notify_invisible(bool bTriggerEvents)
+{
+    set_focus(false);
+
+    frame::notify_invisible(bTriggerEvents);
+}
+
 }
 }
