@@ -386,12 +386,6 @@ namespace gui
         */
         void notify_focus(bool bFocus) override;
 
-        /// Notifies this widget that it is no longer visible on screen.
-        /** \param bTriggerEvents Set to false to disable OnShow/OnHide events
-        *   \note Automatically called by show()/hide().
-        */
-        void notify_invisible(bool bTriggerEvents = true) override;
-
         /// Tells this widget that the global interface scaling factor has changed.
         void notify_scaling_factor_updated() override;
 
