@@ -52,6 +52,18 @@ namespace gui
         /// Returns this widget's Lua glue.
         void create_glue() override;
 
+        /// Notifies this widget that it is now visible on screen.
+        /** \param bTriggerEvents Set to false to disable OnShow/OnHide events
+        *   \note Automatically called by show()/hide().
+        */
+        void notify_visible(bool bTriggerEvents = true) override;
+
+        /// Notifies this widget that it is no longer visible on screen.
+        /** \param bTriggerEvents Set to false to disable OnShow/OnHide events
+        *   \note Automatically called by show()/hide().
+        */
+        void notify_invisible(bool bTriggerEvents = true) override;
+
         static constexpr const char* CLASS_NAME = "FocusFrame";
 
     protected :
